feat: Update homepage UI
- Add typewriter effect, add hero section content, align hero, add navbar w/hamburger for mobile.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -40,3 +40,29 @@
     transform: rotate(360deg);
   }
 }
+/* Below is the navbar css for the hamburger menu */
+.hamburger-menu {
+  width: 2rem;
+  height: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  cursor: pointer;
+}
+
+.line {
+  display: block;
+  width: 100%;
+  height: 0.09rem;
+  background-color: #fff;
+  transition: transform 0.3s ease;
+}
+
+/* When the 'open' class is added to 'hamburger-menu', apply these transformations */
+.hamburger-menu.open .line1 {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger-menu.open .line2 {
+  transform: rotate(-45deg) translate(7px, -7px);
+}
