--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -54,7 +54,7 @@
   display: block;
   width: 100%;
   height: 0.09rem;
-  background-color: #fff;
+  background-color: #bfbfbf;
   transition: transform 0.3s ease;
 }
 
