--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -66,3 +66,17 @@
 .hamburger-menu.open .line2 {
   transform: rotate(-45deg) translate(7px, -7px);
 }
+
+/* Gradient for the hero section */
+.bg-gradient-radial {
+  background-image: radial-gradient(
+    circle,
+    rgba(128, 90, 213, 0.5) 0%,
+    rgba(137, 207, 240, 0.5) 50%,
+    rgba(106, 230, 197, 0.5) 100%
+  );
+  opacity: 0.5; /* Adjust opacity for dim effect */
+  border-radius: 50%; /* Makes the div circular */
+  width: 24rem; /* Adjust size as needed */
+  height: 24rem; /* Adjust size as needed */
+}
