--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -71,12 +71,31 @@
 .bg-gradient-radial {
   background-image: radial-gradient(
     circle,
-    rgba(128, 90, 213, 0.5) 0%,
-    rgba(137, 207, 240, 0.5) 50%,
-    rgba(106, 230, 197, 0.5) 100%
+    rgba(128, 90, 213, 0.3) 0%,
+    rgba(137, 207, 240, 0.3) 50%,
+    rgba(106, 230, 197, 0.3) 100%
   );
   opacity: 0.5; /* Adjust opacity for dim effect */
   border-radius: 50%; /* Makes the div circular */
   width: 24rem; /* Adjust size as needed */
   height: 24rem; /* Adjust size as needed */
+}
+
+/*Featured projects glow section*/
+.glow::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: radial-gradient(
+    circle,
+    rgba(128, 90, 213, 0.2) 0%,
+    rgba(137, 207, 240, 0.2) 50%,
+    rgba(106, 230, 197, 0.2) 100%
+  );
+  opacity: 0.6; /* Adjust opacity to achieve the desired effect */
+  z-index: 1;
+  border-radius: inherit; /* If your element has a border-radius */
 }
